--- a/src/knowledge_graph/templates/graph_template.html
+++ b/src/knowledge_graph/templates/graph_template.html
@@ -9,12 +9,11 @@
             <button onclick="toggleLabels()" id="labels-toggle" class="btn btn-primary">Hide Labels</button>
         </div>
         <div>
-            <span style="margin-right: 15px;"><strong>Communities:</strong></span>
-            <span style="background-color: #e41a1c; width: 20px; height: 20px; display: inline-block; margin-right: 5px;"></span>
-            <span style="background-color: #377eb8; width: 20px; height: 20px; display: inline-block; margin-right: 5px;"></span>
-            <span style="background-color: #4daf4a; width: 20px; height: 20px; display: inline-block; margin-right: 5px;"></span>
-            <span style="background-color: #984ea3; width: 20px; height: 20px; display: inline-block; margin-right: 5px;"></span>
-            <span style="background-color: #ff7f00; width: 20px; height: 20px; display: inline-block; margin-right: 5px;"></span>
+            <span style="margin-right: 15px;"><strong>Edge Types:</strong></span>
+            <span style="width: 30px; height: 2px; background-color: #cccccc; display: inline-block; margin-right: 5px;"></span>
+            <span style="margin-right: 15px;">Extracted</span>
+            <span style="width: 30px; height: 2px; border-top: 1px dashed #cccccc; display: inline-block; margin-right: 5px;"></span>
+            <span>Inferred</span>
         </div>
     </div>
     
