fixed edge legend color

--- a/src/knowledge_graph/templates/graph_template.html
+++ b/src/knowledge_graph/templates/graph_template.html
@@ -10,9 +10,9 @@
         </div>
         <div>
             <span style="margin-right: 15px;"><strong>Edge Types:</strong></span>
-            <span style="width: 30px; height: 2px; background-color: #cccccc; display: inline-block; margin-right: 5px;"></span>
+            <span style="width: 30px; height: 2px; background-color: #666666; display: inline-block; margin-right: 5px;"></span>
             <span style="margin-right: 15px;">Extracted</span>
-            <span style="width: 30px; height: 2px; border-top: 1px dashed #cccccc; display: inline-block; margin-right: 5px;"></span>
+            <span style="width: 30px; height: 2px; border-top: 1px dashed #666666; display: inline-block; margin-right: 5px;"></span>
             <span>Inferred</span>
         </div>
     </div>
